--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,5 @@
+<div id="wrapper">
+<div id="content">
 <div class="container mt-5" >
   <h1>DASHBOARD</h1>
 
@@ -174,6 +176,9 @@
   </div>
 </div>
 
-<br>
-<br>
+
+</div>
+<div id="footer">
 <%= render partial: 'shared/footer' %>
+</div>
+</div>
