--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,3 @@
-<div id="wrapper">
-<div id="content">
 <div class="container mt-5" >
   <h1>DASHBOARD</h1>
 
@@ -115,7 +113,7 @@
   </div>
 
 
-  <div class="mt-5">
+  <div class="my-5">
     <h3>My past interviews</h3>
     <% if @past_interviews.empty? %>
       <p> You don't have any past interviews yet. </p>
@@ -174,11 +172,4 @@
       </table>
     <% end %>
   </div>
-</div>
-
-
-</div>
-<div id="footer">
-<%= render partial: 'shared/footer' %>
-</div>
 </div>
